--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
   </style>
 </head>
 <body>
-  <iframe src="Captcha3.html" title="Inner Page"></iframe>
+  <iframe src="Captcha.html" title="Inner Page"></iframe>
 </body>
 </html>
